@@ -1,3 +1,8 @@
+2024-12-13 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCicode.c:
+	  Do not propagate volatile qualifier to iTemp in implicit casts.
+
 2024-12-12 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCgenconstprop.cc,
